--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,19 @@
             <artifactId>JDA</artifactId>
             <version>5.0.0</version>
         </dependency>
+
         <!-- JAVA DOT ENV -->
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>java-dotenv</artifactId>
             <version>5.2.2</version>
+        </dependency>
+
+        <!-- JAVA GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
     </dependencies>
 
